--- a/package.json
+++ b/package.json
@@ -50,10 +50,10 @@
 	},
 	"husky": {
 		"hooks": {
-			"pre-commit": [
-				"lint-staged",
-				"npm test"
-			]
+			"pre-commit": 
+				"lint-staged"
+			
+			
 		}
 	},
 	"lint-staged": {
