--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"dev": "netlify dev -f .netlify/functions",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
-		"test": "react-scripts test",
+		"test": "cross-env CI=true react-scripts test",
 		"eject": "react-scripts eject",
 		"prettier": "prettier --write ."
 	},
@@ -42,6 +42,7 @@
 		]
 	},
 	"devDependencies": {
+		"cross-env": "^7.0.3",
 		"eslint-config-prettier": "^7.2.0",
 		"husky": "^5.0.9",
 		"lint-staged": "^10.5.4",
@@ -50,10 +51,7 @@
 	},
 	"husky": {
 		"hooks": {
-			"pre-commit": 
-				"lint-staged"
-			
-			
+			"pre-commit": "lint-staged"
 		}
 	},
 	"lint-staged": {
