adding build elements

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 	"scripts": {
 		"dev": "netlify dev -f .netlify/functions",
 		"start": "react-scripts start",
-		"build": "react-scripts build",
+		"build": "react-scripts build && cp _redirects build/_redirects",
 		"test": "cross-env CI=true react-scripts test",
 		"eject": "react-scripts eject",
 		"prettier": "prettier --write ."
